--- a/custom.css
+++ b/custom.css
@@ -1,198 +1,234 @@
 $primary-color:white;
 $secondary-color:yellow;
 
-
-
-*{
+* {
   box-sizing: border-box;
-  margin:0px;
-  padding:0px;
+  margin: 0px;
+  padding: 0px;
 }
 
-body{
-  background-color:white;
-  color:black;
-  height:100%;
-  margin:0;
+body {
+  background-color: white;
+  color: black;
+  height: 100%;
+  margin: 0;
   line-height: 1.5;
+}
 
-  }
+/* img { */
+  /* height: 50vh; */
+  /* width: 40vw; */
+/* } */
 
+.container1 {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  height: 50vh;
+  width: 90vw;
+}
 
-.container1{
-  display:flex;
-  flex-direction:row;
+.container2 {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  height: 50vh;
+  width: 90vw;
+}
 
-  margin:auto;
-  height:45vh;
-  width:80vw;
-
-  }
-
-.container2{
-    display:flex;
-    flex-direction: row;
-    
-    margin:auto;
-    height:40vh;
-    width:80vw;
-  }
-
-
-.box1{
-  flex:1;
-
-  margin: 10px;
+.box1 {
+  flex: 1;
+  margin: 20px;
   background-image: url('agogos-1.jpg');
   background-repeat: no-repeat;
-  background-size:100% 100%;
+  background-size: cover;
 }
 
-
-.box2{
-  flex:1;
-
+/* .box1 background-image{
+  opacity:1;
+  -webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+} */
+/* .box1 :hover background-image{
+  opacity: .5;
+} */
+.box2 {
+  flex: 1;
+  background-size: cover;
   background-image: url('museum-1.jpg');
   background-repeat: no-repeat;
-  background-size:100% 100%;
-  margin: 10px;
-
-  }
-
-
-.box3{
-  flex:1;
-
-  margin: 10px;
-
+  margin: 20px;
 }
 
-.box4{
-  flex:1;
+/* img:hover { */
+  /* opacity: .35; */
+/* } */
 
-  margin: 10px;
-
+.box3 {
+  flex: 1;
+  margin: 20px;
 }
 
-nav{
-  display:flex;
+.box4 {
+  flex: 1;
+  margin: 20px;
+}
 
+nav {
+  display: flex;
   justify-content: space-around;
   align-items: center;
   box-sizing: border-box;
   min-height: 4vh;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
 
-  }
-
-
-.logo{
+.logo {
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 16px;
-
-
 }
 
-
-
-.nav-link li{
+.nav-link li {
+  position: relative;
   list-style: none;
+  justify-content: flex-end;
 }
 
-.nav-link{
-  display:flex;
-  justify-content:space-around;
-  width:20%;
-
+.nav-link {
+  display: flex;
+  justify-content: space-around;
+  width: 20%;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 2px;
   text-decoration: none;
 }
 
-.burger{
+.burger {
   display: none;
 }
 
-.burger div{
-  width:20px;
-  height:2px;
+.burger div {
+  width: 20px;
+  height: 2px;
   margin: 5px;
   background-color: black;
 }
 
-
-
-
-
-
-.heading2{
-  margin:0px;
+.heading2 {
+  margin: 0px;
   font-weight: 300;
   font-size: 14px;
   justify-content: center;
-
-  height:6vh;
+  height: 6vh;
   display: flex;
   align-items: center;
 }
 
-
-
-.heading2{
+.heading2 {
   margin-bottom: 10px;
 }
 
-header{
-  position:fixed;
+header {
+  position: fixed;
 }
 
-.text-secondary{
-  color:$secondary-color;
+.text-secondary {
+  color: $secondary-color;
+}
 
+/* .intro {
+  font-weight: lighter;
+  font-style: 20px;
+  letter-spacing: .1em;
+  position: absolute;
+  display: block;
+  top: 40%;
+  left: 0;
+  text-align: center;
+  opacity: 0;
+  z-index: 2;
+} */
+
+.navbar {
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 2px;
+  margin-left: 47%;
+  margin-top: 47%;
+}
+
+a {
+  text-decoration: none;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+  color: black;
 }
 
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+.opacity{
+  opacity: .3;
+  background-color: #fff;
+}
 
 
-
-@media screen and (max-width:768px){
-  body{
+@media screen and (max-width:768px) {
+  body {
     overflow-x: hidden;
   }
 
-  .nav-link{
-    position:absolute;
-    right:0px;
-    top:8vh;
-    height:100%;
-    width:100%;
+  .nav-link {
+    position: absolute;
+    right: 0px;
+    top: 8vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: yellow;
     align-items: center;
-    transform:translateX(100%);
-
+    transform: translateX(100%);
   }
 
-  .nav-link li{
-    opacity:0;
+  .nav-link li {
+    opacity: 0;
   }
 
-  .burger{
-    display:block;
-    cursor:pointer;
+  .burger {
+    display: block;
+    cursor: pointer;
   }
 
-  .nav-active{
+  .nav-active {
     transform: translateX(0%);
   }
 
-  .container1,.container2{
+  .container1, .container2 {
     display: flex;
     flex-direction: column;
-    width:80vw;
-    height:90vh;
+    width: 80vw;
+    height: 90vh;
   }
+
+  /* .hide {
+    display: none;
+  }
+.hidden{
+  visibility: hidden !important;
 }
+  .show {
+    display: block;
+  }
+  .opacity{
+    opacity: .3;
+    background-color: #fff;
+  } */
