--- a/custom.css
+++ b/custom.css
@@ -20,6 +20,8 @@ body {
   /* width: 40vw; */
 /* } */
 
+
+
 .container1 {
   display: flex;
   flex-direction: row;
@@ -52,6 +54,7 @@ body {
 /* .box1 :hover background-image{
   opacity: .5;
 } */
+
 .box2 {
   flex: 1;
   background-size: cover;
@@ -138,6 +141,10 @@ header {
   color: $secondary-color;
 }
 
+.intro{
+  display: none;
+  opacity: 1 !important;
+}
 /* .intro {
   font-weight: lighter;
   font-style: 20px;
