--- a/custom.css
+++ b/custom.css
@@ -162,7 +162,7 @@ header {
   display: none;
   opacity: 1 !important;
   position: relative;
-  padding-top: 15%;
+  padding-top: 20%;
   left: 0;
   height: 80%;
   text-align: center;
@@ -216,7 +216,7 @@ a {
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: yellow;
+    /* background-color: yellow; */
     align-items: center;
     transform: translateX(100%);
   }
