--- a/custom2.css
+++ b/custom2.css
@@ -100,10 +100,10 @@ nav {
 }
 
 
-.all{
+/* .all{
   padding-left: auto;
   padding-right: auto;
-}
+} */
 
 
 /* .container1 {
@@ -126,12 +126,12 @@ nav {
 
 }
 
-.container1{
+/* .container1{
   box-sizing: border-box;
   padding-left: 100px;
   padding-right:100px;
 
-}
+} */
 
 
 .hide {
@@ -161,15 +161,44 @@ nav {
   border-radius: 50%;
 } */
 
+
+.example-pager{
+  margin-top: -270px;
+  margin-left: 10px;
+  color:black;
+  margin-bottom: 50px;
+
+
+}
+
+#prev, #next{
+  width: 10px;
+    font-size: 25px;
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    /* line-height: 50px; */
+    font-weight: bold;
+    padding: 0 40px;
+    margin-top: -480px;
+
+
+}
+
 #personas{
   width:150px;
   height:150px;
   border-radius: 50%;
+  margin: 10px;
+  margin-top: 30px;
 }
 
 #storyboard{
   width:700px;
   height:500px;
+  background-size: cover;
 
 }
 
@@ -178,6 +207,8 @@ nav {
   height:250px;
   padding: 10px;
 }
+
+
 
 span{
   font-weight: bold;
@@ -250,6 +281,11 @@ span{
     flex-direction: column;
     width: 80vw;
     height: 90vh;
+  }
+
+  #storyboard{
+    width: 80vw;
+    height: 40vh;
   }
 
 
