--- a/custom2.css
+++ b/custom2.css
@@ -102,25 +102,6 @@ nav {
 }
 
 
-/* .cover{
-  width:900px;
-  height:500px;
-  background-size: cover;
-
-} */
-/* .all{
-  padding-left: auto;
-  padding-right: auto;
-} */
-
-
-/* .container1 {
-  width:800px;
-  position: inherit;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-} */
 
 .container1{
   box-sizing: border-box;
@@ -145,12 +126,19 @@ nav {
 
 }
 
-/* .container1{
-  box-sizing: border-box;
-  padding-left: 100px;
-  padding-right:100px;
+#box1{
+  width:768px;
+  position: inherit;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #efefef;
+  text-align: center;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  padding-left:20px;
+  padding-right:20px;
+}
 
-} */
 
 
 .hide {
@@ -161,24 +149,7 @@ nav {
   display: block;
 }
 
-/* .box1 {
-  display: flex;
-  flex-direction: row;
-  width:700px;
-  height: 500px;
-  margin: 20px;
-  background-image: url('storyboard.JPG');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 
-} */
-
-/* img{
-  width:150px;
-  height:150px;
-  border-radius: 50%;
-} */
 
 
 .example-pager{
@@ -245,6 +216,8 @@ span{
 .video iframe{
 
 }
+
+
 
 @import url(https://fonts.googleapis.com/css?family=Expletus+Sans:600);
 /*==========SCALE-IN==========*/
@@ -361,18 +334,7 @@ main{
 
 }
 
-/*
-@media screen and (min-width:1200px) {
 
-  .container{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height: 90vh;
-  }
-
-
-} */
 
 @media screen and (max-width:768px) {
   body {
@@ -412,11 +374,13 @@ main{
     height: 90vh;
   }
 
-  .container1{
+
+
+  #box1{
     display: flex;
     flex-direction: column;
     width: 80vw;
-    height: 90vh;
+
   }
 
   #storyboard{
