--- a/custom3.css
+++ b/custom3.css
@@ -100,19 +100,6 @@ nav {
 }
 
 
-.all{
-  padding-left: auto;
-  padding-right: auto;
-}
-
-
-/* .container1 {
-  width:800px;
-  position: inherit;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-} */
 
 .container{
   width:768px;
@@ -126,16 +113,6 @@ nav {
 
 }
 
-.container1{
-  box-sizing: border-box;
-  padding-left: 100px;
-  padding-right:100px;
-
-}
-
-/* .cycle-slideshow{
-  min-height:30vh;
-} */
 
 .hide {
   display: none;
@@ -145,24 +122,20 @@ nav {
   display: block;
 }
 
-/* .box1 {
-  display: flex;
-  flex-direction: row;
-  width:700px;
-  height: 500px;
-  margin: 20px;
-  background-image: url('storyboard.JPG');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 
-} */
 
-/* img{
-  width:150px;
-  height:150px;
-  border-radius: 50%;
-} */
+#box1{
+  width:768px;
+  position: inherit;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #efefef;
+  text-align: center;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  padding-left:20px;
+  padding-right:20px;
+}
 
 #personas{
   width:150px;
@@ -180,6 +153,19 @@ nav {
   width:350px;
   height:250px;
   padding: 10px;
+}
+
+#teachers{
+  width:400px;
+  height:275px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 10px;
+}
+
+#theory{
+  width:750px;
+  height:275px;
 }
 
 span{
@@ -314,18 +300,6 @@ main{
 }
 
 
-/*
-@media screen and (min-width:1200px) {
-
-  .container{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height: 90vh;
-  }
-
-
-} */
 
 @media screen and (max-width:768px) {
   body {
@@ -372,9 +346,25 @@ main{
     height: 90vh;
   }
 
+  #box1{
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+
+  }
+  #teachers{
+    width: 70vw;
+    height: 35vh;
+  }
+
   #storyboard{
     width: 80vw;
     height: 40vh;
+  }
+
+  #theory{
+    width: 80vw;
+    height: 20vh;
   }
 
   iframe{
