--- a/custom3.css
+++ b/custom3.css
@@ -5,11 +5,36 @@
   padding: 0px;
 }
 
+
 h2{
-  font-family: 'Poppins', sans-serif;
-  font-size: 24px;
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
   letter-spacing: 1px;
   margin: 10px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+h3{
+  font-family: 'Muli', sans-serif;
+  font-size: 24px;
+  text-align: left;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 400;
+}
+
+p{
+  font-family: 'Arvo', serif;
+  font-size: 16px;
+  letter-spacing: 0.8px;
+  line-height: 25px;
+  font-weight: 300;
+  text-align:justify;
+  color:#494949;
+
 }
 
 a{
@@ -31,14 +56,7 @@ a:hover{
   letter-spacing: 2px;
 }
 
-p{
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  letter-spacing: 0.6px;
-  line-height: 25px;
-  text-align:justify;
 
-}
 
 body {
   background-color: white;
@@ -127,7 +145,8 @@ nav {
 #box1{
   width:768px;
   position: inherit;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  padding-top: 30px;
   margin-left: auto;
   margin-right: auto;
   background-color: #efefef;
