--- a/custom.css
+++ b/custom.css
@@ -287,3 +287,21 @@ a {
     opacity: .3;
     background-color: #fff;
   } */
+
+  @media screen and (max-width:375px) {
+    .container1, .container2 {
+      display: flex;
+      flex-direction: column;
+      width: 80vw;
+      height: 60vh;
+    }
+
+    .heading2{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 80vw;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+    }
