--- a/custom2.css
+++ b/custom2.css
@@ -497,3 +497,43 @@ main{
     height: 40vh;
 
   }
+
+  @media screen and (max-width:375px) {
+    .container1, .container2 {
+      display: flex;
+      flex-direction: column;
+      width: 80vw;
+      height: 60vh;
+    }
+
+    /* .hero{
+      width:100vw;
+      margin-left: 0;
+      margin-right: 0;
+    } */
+
+    #storyboard{
+      width: 80vw;
+      height: 30vh;
+    }
+
+    #report{
+      width: 80vw;
+      height: 20vh;
+    }
+
+    #wireframes{
+      width: 80vw;
+      height: 25vh;
+    }
+
+    #articulate{
+      width: 80vw;
+      height: 30vh;
+    }
+
+    iframe{
+      width: 80vw;
+      height: 40vh;
+
+    }
