--- a/custom.css
+++ b/custom.css
@@ -241,7 +241,7 @@ a {
     overflow-x: hidden;
   }
 
-  .nav-link {
+  /* .nav-link {
     position: absolute;
     right: 0px;
     top: 8vh;
@@ -250,9 +250,9 @@ a {
     display: flex;
     flex-direction: column;
     /* background-color: yellow; */
-    align-items: center;
+    /* align-items: center;
     transform: translateX(100%);
-  }
+  }  */
 
   .nav-link li {
     opacity: 0;
@@ -293,7 +293,7 @@ a {
       display: flex;
       flex-direction: column;
       width: 80vw;
-      height: 60vh;
+      height: 50vh;
     }
 
     .heading2{
