--- a/custom2.css
+++ b/custom2.css
@@ -405,7 +405,7 @@ main{
 }
 
 
-@media all and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .hero{
     height: 50vw;
   }
@@ -427,7 +427,7 @@ main{
     overflow-x: hidden;
   }
 
-  .nav-link {
+ /* .nav-link {
     position: absolute;
     right: 0px;
     top: 8vh;
@@ -435,10 +435,8 @@ main{
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* background-color: yellow; */
-    align-items: center;
     transform: translateX(100%);
-  }
+  }   */
 
   .nav-link li {
     opacity: 0;
