--- a/custom3.css
+++ b/custom3.css
@@ -625,7 +625,7 @@ main{
     overflow-x: hidden;
   }
 
-  .nav-link {
+  /* .nav-link {
     position: absolute;
     right: 0px;
     top: 8vh;
@@ -633,10 +633,9 @@ main{
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* background-color: yellow; */
     align-items: center;
     transform: translateX(100%);
-  }
+  } */
 
   .nav-link li {
     opacity: 0;
@@ -688,7 +687,7 @@ main{
 
   #theory{
     width: 80vw;
-    height: 20vh; 
+    height: 20vh;
   }
 
   iframe{
