--- a/custom4.css
+++ b/custom4.css
@@ -256,7 +256,7 @@ ul {
     height:40vh;
   }
 
-  @media screen and (max-width:400px) {
+  @media screen and (max-width:440px) {
 
   #photos img{
     width:80vw;
@@ -268,6 +268,10 @@ ul {
     width:80vw;
     height:35vh;
 
+  }
+
+  h2{
+    margin-top: 20px;
   }
 
 
