--- a/custom3.css
+++ b/custom3.css
@@ -103,7 +103,7 @@ nav {
   font-size: 16px;
   letter-spacing: 2px;
   margin-left: 47%;
-  margin-top: 47%;
+    margin-top: 300px
 }
 
 .burger {
