--- a/custom2.css
+++ b/custom2.css
@@ -15,6 +15,7 @@ h2{
   margin: 10px;
   margin-top: 40px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 h3{
@@ -22,8 +23,8 @@ h3{
   font-size: 24px;
   text-align: left;
   letter-spacing: 0.5px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   font-weight: 400;
 }
 
@@ -37,14 +38,63 @@ h5{
   font-weight: 400;
 }
 
+/*
+.audience{
+  font-family: 'Arvo', serif !important;
+  font-size: 16px;
+  letter-spacing: 0.8px;
+  line-height: 25px;
+  font-weight: 300;
+  color:#494949;
+} */
+/*
+.audience li{
+    list-style:initial !important;
+    justify-content: flex-start !important;
+    font-family: 'Arvo', serif !important;
+    font-size: 16px;
+    letter-spacing: 0.8px;
+    line-height: 25px;
+    font-weight: 300;
+
+} */
+
+/* ol{
+  font-family: 'Arvo', serif !important;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 300;
+  color:#494949;
+  justify-content:flex-start;
+  margin-left: 20px;
+
+} */
+
+ul{
+  font-family: 'Arvo', serif ;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 300;
+  color:#494949;
+  justify-content:flex-start;
+  margin-left: 20px;
+
+}
+
+/* ul li{
+    justify-content:flex-start;
+} */
+
 a{
-  text-decoration: none;
-  padding: 10px;
-  color: black;
+  text-decoration: none !important;
+  padding: 10px !important;
+  color: black !important;
 }
 
 a:hover{
-  color: grey;
+  color: grey !important;
 }
 
 .choice{
@@ -76,19 +126,19 @@ body {
 }
 
 nav {
-  display: flex;
-  justify-content: space-around;
+  display: flex !important;
+  justify-content: space-around !important;
   align-items: center;
   box-sizing: border-box;
   min-height: 4vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
   margin-top: 18px;
 }
 
 .logo {
   text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 16px;
+  letter-spacing: 5px !important;
+  font-size: 16px !important;
 
 }
 
@@ -102,7 +152,7 @@ nav {
   display: flex;
   justify-content: space-around;
   width: 20%;
-  font-weight: bold;
+  font-weight: bold !important;
   font-size: 14px;
   letter-spacing: 2px;
   text-decoration: none;
@@ -147,9 +197,7 @@ nav {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  /* top:50%; */
-  /* transform: translate(-50%,-50%); */
-  text-align: center;
+
 
 }
 
@@ -170,11 +218,11 @@ nav {
 }
 
 
-li{
+/* li{
   list-style: none;
   justify-content:flex-start;
 
-}
+} */
 
 
 
@@ -204,9 +252,10 @@ li{
 }
 
 
-
-
-
+#Jessica{
+  width:768px;
+  height:450px;
+}
 
 
 .example-pager{
@@ -282,11 +331,11 @@ li{
   margin-top: -100px;
 } */
 
-span{
-  /* font-weight: bold; */
+/* span{
+
   font-size: 24px;
   font-family: 'Arvo', serif;
-}
+} */
 
 .fas{
   font-size: 18px;
@@ -474,6 +523,11 @@ main{
   #storyboard{
     width: 80vw;
     height: 40vh;
+  }
+
+  #Jessica{
+    width:80vw;
+    height:35vh;
   }
 
   #report{
