--- a/custom2.css
+++ b/custom2.css
@@ -178,7 +178,11 @@ nav {
   background-color: black;
 }
 
+.carousel-inner img{
+  margin-left: auto;
+  margin-right: auto;
 
+}
 
 .container1{
   box-sizing: border-box;
@@ -248,6 +252,10 @@ nav {
 }
 
 #box3{
+  margin-top: -120px;
+}
+
+.future{
   margin-top: -120px;
 }
 
@@ -540,6 +548,14 @@ main{
     height: 40vh;
 
   }
+
+  .future{
+    margin-top: 30px;
+  }
+
+  .report{
+    display: none;
+  }
 }
 
 @media screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -621,6 +637,10 @@ main{
     width: 80vw;
     height: 40vh;
 
+  }
+
+  .future{
+    margin-top: -20px;
   }
 }
 
