--- a/custom3.css
+++ b/custom3.css
@@ -14,6 +14,7 @@ h2{
   margin: 10px;
   margin-top: 40px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 h3{
@@ -21,8 +22,8 @@ h3{
   font-size: 24px;
   text-align: left;
   letter-spacing: 0.5px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   font-weight: 400;
 }
 
@@ -45,6 +46,19 @@ a{
 
 a:hover{
   color: grey;
+}
+
+
+ul{
+  font-family: 'Arvo', serif ;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+  font-weight: 300;
+  color:#494949;
+  justify-content:flex-start !important;
+  margin-left: 20px;
+
 }
 
 .choice{
@@ -128,7 +142,7 @@ nav {
   margin-right: auto;
   /* top:50%; */
   /* transform: translate(-50%,-50%); */
-  text-align: center;
+  /* text-align: center; */
 
 }
 
@@ -656,12 +670,24 @@ main{
   }
 
   #box1{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    width: 80vw;
-
-
+    width: 80vw; */
+    display: none;
   }
+
+  .audience{
+    display: block;
+  }
+
+  .teachers{
+    display: block;
+    width: 70vw;
+    height: 25vh;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   #teachers{
     display: none;
   }
