--- a/custom2.css
+++ b/custom2.css
@@ -28,6 +28,13 @@ h3{
   font-weight: 400;
 }
 
+h4{
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px !important;
+  font-weight: bold !important;
+
+}
+
 h5{
   font-family: 'Muli', sans-serif;
   font-size: 18px;
@@ -123,6 +130,7 @@ nav {
   font-size: 14px;
   letter-spacing: 2px;
   text-decoration: none;
+  font-family: 'Poppins', sans-serif;
 
 }
 
@@ -290,15 +298,7 @@ nav {
   height:300px;
 }
 
-/* #adv-custom-pager{
-  margin-top: -100px;
-} */
 
-/* span{
-
-  font-size: 24px;
-  font-family: 'Arvo', serif;
-} */
 
 .fas{
   font-size: 18px;
@@ -522,129 +522,3 @@ main{
     display: none;
   }
 }
-
-/* @media screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .hero{
-    height: 50vw;
-  }
-  .bar{
-    height: 26vw;
-    top: 10vw;
-  }
-  .hero h1{
-    font-size: 8vw;
-    top: 13vw;
-  }
-  .hero p{
-    font-size: 3vw;
-    top: 27vw;
-  }
-
-
-  body {
-    overflow-x: hidden;
-  }
-
-
-
-  .nav-link li {
-    opacity: 0;
-  }
-
-  .burger {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav-active {
-    transform: translateX(0%);
-  }
-
-  .container{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height: 90vh;
-  }
-
-
-
-  #box1{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-
-  }
-
-  #box2{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-    height:auto;
-
-  }
-
-  #box3{
-    margin-top: -280px;
-  }
-
-  #storyboard{
-    width: 80vw;
-    height: 40vh;
-  }
-
-  #report{
-    width: 80vw;
-    height: 20vh;
-  }
-
-  iframe{
-    width: 80vw;
-    height: 40vh;
-
-  }
-
-  .future{
-    margin-top: -20px;
-  }
-} */
-
-  /* @media screen and (min-width:375px) {
-    .container1, .container2 {
-      display: flex;
-      flex-direction: column;
-      width: 80vw;
-      height: 60vh;
-    }
-
-    /* .hero{
-      width:100vw;
-      margin-left: 0;
-      margin-right: 0;
-    } */
-
-    /* #storyboard{
-      width: 80vw;
-      height: 50vh;
-    }
-
-    #report{
-      width: 80vw;
-      height: 20vh;
-    }
-
-    #wireframes{
-      width: 80vw;
-      height: 25vh;
-    }
-
-    #articulate{
-      width: 80vw;
-      height: 30vh;
-    }
-
-    iframe{
-      width: 80vw;
-      height: 40vh;
-
-    }  */
