--- a/custom3.css
+++ b/custom3.css
@@ -82,7 +82,7 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-around !important;
   align-items: center;
   box-sizing: border-box;
   min-height: 4vh;
@@ -99,17 +99,21 @@ nav {
 .nav-link li {
   position: relative;
   list-style: none;
-  justify-content: flex-end;
+  justify-content: flex-end! important;
+  padding:10px;
+
 }
 
 .nav-link {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end! important;
   width: 20%;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 2px;
   text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 .navbar {
@@ -138,14 +142,14 @@ nav {
 }
 
 .container{
-  width:768px;
+  width:992px;
   position: inherit;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  /* top:50%; */
-  /* transform: translate(-50%,-50%); */
-  /* text-align: center; */
+  padding-right: 15px;
+  padding-left: 15px;
+
 
 }
 
@@ -181,14 +185,14 @@ nav {
 }
 
 #storyboard{
-  width:700px;
-  height:500px;
+  width:800px;
+  height:550px;
 
 }
 
 #information{
-  width:700px;
-  height:350px;
+  width:800px;
+  height:400px;
 
 }
 
@@ -618,7 +622,17 @@ main{
 }
 
 
+
+
+
 @media screen and (max-width: 768px) {
+  .container{
+      display: flex;
+      flex-direction: column;
+      width: 80vw;
+      height: 90vh;
+  }
+
   .hero{
     height: 50vw;
   }
