--- a/custom4.css
+++ b/custom4.css
@@ -124,9 +124,11 @@ a:hover{
 }
 
 .container{
-width:930px;
+width:992px;
 position: inherit;
 margin-top: 50px;
+padding-left: 15px;
+padding-right: 15px;
 margin-left: auto;
 margin-right: auto;
 text-align: center;
@@ -183,16 +185,17 @@ text-align: center;
 
 #photos {
   opacity: .88;
-  /* margin-bottom: 40px !important; */
+  /* padding-bottom: 400px !important; */
+
 
 }
 
 #photos img {
   width: 32%;
   /* height:20%; */
-  float: left;
+  float:left;
   display: block;
-  margin: 2px;
+  margin: 3px;
   margin-bottom: 5px;
   /* margin-left: 20px; */
 }
@@ -234,7 +237,7 @@ ul {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 40px;
+  margin-bottom: 40px ;
 }
 
 @media screen and (max-width:768px) {
