--- a/custom.css
+++ b/custom.css
@@ -37,7 +37,7 @@ body {
 .box1 {
   flex: 1;
   margin: 20px;
-  background-image: url('agogos-1.jpg');
+  background-image: url('Google.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -58,7 +58,7 @@ body {
   flex: 1;
   flex-wrap: wrap;
   background-size: cover;
-  background-image: url('art3.jpeg');
+  background-image: url('agogos-1.jpg');
   background-repeat: no-repeat;
   margin: 20px;
 }
@@ -68,7 +68,7 @@ body {
   margin: 20px;
   flex-wrap: wrap;
   background-size: cover;
-  background-image: url('investment2.jpeg');
+  background-image: url('pet.jpeg');
   background-repeat: no-repeat;
 
 }
