--- a/custom4.css
+++ b/custom4.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+
 }
 
 
@@ -13,6 +14,7 @@ body {
   height: 100%;
   margin: 0;
   line-height: 1.5;
+  margin-bottom: 30px;
 }
 
 
@@ -31,6 +33,7 @@ h2{
   font-size: 18px;
   text-align: left !important;
   margin-bottom: 10px;
+  margin-top: 20px !important;
 }
 
 .navbar {
@@ -95,6 +98,10 @@ nav {
   display: block;
 }
 
+.director{
+  margin-top: 30px !important;
+}
+
 a {
   text-decoration: none;
   flex-direction: column;
@@ -112,7 +119,7 @@ a {
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 2px;
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 a:hover{
